Fixed sizings and added jump to top

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,17 +1,25 @@
 $unit: 11pt
 $spacing: $unit * 2
 
+$white: white
 $grey-lightest: #eee
 $grey-light: #afafaf
 $grey-dark: #414141
 $grey-darkest: #111
 
+@mixin font-size($size)
+    font-size: $size
+    line-height: $size * 1.2
+
 @import 'fonts'
+
+// Base styles
 
 html
     margin: 0
-    font-size: $unit
-    line-height: $unit
+    scroll-behavior: smooth
+    background: $white
+    +font-size($unit)
 
 body
     font-family: 'Poppins', sans-serif
@@ -21,8 +29,7 @@ body
     color: $grey-darkest
 
 h1
-    font-size: #{$unit * 3.6}
-    line-height: #{$unit * 3.6}
+    +font-size($unit * 3.6)
     font-weight: 200
     text-align: center
     margin-top: $spacing * 2
@@ -30,41 +37,19 @@ h1
     a
         text-decoration: none
     p
-        font-size: $unit
+        +font-size($unit)
         font-weight: 200
         margin: 0
 
-$h2-size: #{$unit * 2}
+$h2-size: $unit * 2
 h2
-    font-size: $h2-size
-    line-height: $h2-size
+    +font-size($h2-size)
     font-weight: 200
     text-transform: capitalize
 
 h3
-    font-size: $unit
-    line-height: $unit * 1.2
+    +font-size($unit)
     font-weight: 200
-
-nav
-    margin: $spacing (-$spacing/2)
-    text-align: right
-    a
-        font-weight: 500
-        text-decoration: none
-        color: $grey-light
-        transition: color 0.15s
-        padding: $spacing / 2
-        &:hover
-            color: $grey-dark
-        &+a
-            margin-left: 0
-        &.active
-            color: $grey-darkest
-
-@media (max-width: 576px)
-    nav
-        text-align: center
 
 a
     color: $grey-darkest
@@ -76,12 +61,70 @@ footer
     a
         margin: 0 $spacing / 4
 
+.brand
+    width: $unit * 1.5
+    height: $unit * 1.5
+
+span.right
+    float: right
+
+// === Navigation === //
+
+nav
+    margin: $spacing/2 (-$spacing/2)
+    text-align: right
+    a
+        font-weight: 500
+        text-decoration: none
+        color: $grey-light
+        transition: color 0.15s
+        padding: $spacing / 2
+        display: inline-block
+        &:hover
+            color: $grey-dark
+        &+a
+            margin-left: 0
+        &.active
+            color: $grey-darkest
+
+@media (max-width: 576px)
+    nav
+        text-align: center
+
+nav
+    background: $white
+    z-index: 2
+    position: sticky
+.top-link
+    display: block
+    text-align: center
+    position: sticky
+    top: 0
+    line-height: $spacing * 2
+    margin-top: -$spacing * 2
+    z-index: 1
+    text-decoration: none
+    background: rgba($white, 0.4)
+    transition: background 0.15s
+    &:hover
+        background: rgba($white, 0.5)
+
+// === Grid === //
+
 .grid
     display: grid
-    // Image size is 570px. Half of that is 285px, with a minmax of the half then we never
-    // have a greater cell size than 570px.
-    grid-template-columns: repeat(auto-fill, minmax(unquote('min(285px, 100%, 50vh)'), 1fr))
+    grid-template-columns: repeat(auto-fill, minmax(285px, 1fr))
     grid-gap: $spacing
+
+@media (max-width: 570px) and (max-aspect-ratio: 1/1)
+    .grid
+        grid-template-columns: 1fr
+
+@media (max-height: 570px) and (min-aspect-ratio: 1/1)
+    .grid
+        grid-template-columns: 1fr 1fr
+
+// === Image container === //
 
 .img-container
     position: relative
@@ -100,6 +143,11 @@ footer
     &.dark
         background: $grey-dark
 
+a:hover .img-container, a.img-container:hover
+    cursor: pointer
+    opacity: 0.6
+    box-shadow: rgba($grey-darkest, 0.3) 0 $spacing/16 $spacing/4
+
 .listing
     text-decoration: none
     .img-container
@@ -107,15 +155,10 @@ footer
     .prompt
         text-decoration: underline
 
-span.right
-    float: right
-
-a:hover .img-container, a.img-container:hover
-    cursor: pointer
-    opacity: 0.6
-    box-shadow: rgba($grey-darkest, 0.3) 0 $spacing/16 $spacing/4
+// === Lightbox === //
 
 .lightbox
+    $control-size: $h2-size * 1.2
     color: $grey-lightest
     .item
         display: flex
@@ -127,21 +170,26 @@ a:hover .img-container, a.img-container:hover
         left: 0
         right: 0
         bottom: 0
+        z-index: 1
         background: rgba($grey-darkest, 0.9)
         img
-            margin: $spacing
-            width: calc(100% - #{$spacing * 2})
+            margin: $spacing 0
+            width: 100%
             height: 0
             flex-grow: 1
             object-fit: contain
-        h2
+        .title
+            height: $h2-size * 1.2
             margin-top: 0
             margin-bottom: $spacing
+            margin-left: $control-size + $spacing
+            margin-right: $control-size + $spacing
+            text-align: center
+            display: flex
+            align-items: center
+            justify-content: center
         .control
             position: absolute
-            font-family: monospace
-            font-size: #{$unit * 5}
-            line-height: 1em
             text-decoration: none
             display: flex
             align-items: center
@@ -167,7 +215,6 @@ a:hover .img-container, a.img-container:hover
                 right: 0
                 span
                     background-image: url(/svg/times-solid.svg)
-            $control-size: $h2-size
             span
                 width: $control-size
                 height: $control-size
@@ -179,8 +226,3 @@ a:hover .img-container, a.img-container:hover
                 background-size: $control-size $control-size
     .item:not(:target)
         display: none
-
-.brand
-    font-size: #{$unit * 1.5}
-    width: $unit
-    height: $unit
